# autonomars

./: Cargo.toml  Cargo.toml.old  README.md
.cargo/: config.toml
src/: main.rs
